--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -34,5 +34,6 @@ jobs:
           path: public
     
       - name: Deploy to GitHub Pages
+        id: deployment
         uses: actions/deploy-pages@v4
 
